--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,3 +4,9 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body!= body
+
+    #fb-root
+
+    script(src="//connect.facebook.net/en_US/all.js#xfbml=1&appId=216538865141478")
+    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js")
+    script(src="/javascripts/main.js")
