Additional icons and started with steps

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -8,3 +8,15 @@ body {
 @import "responsive.less";
 @iconSpritePath: "/images/bootstrap/glyphicons-halflings.png";
 @iconWhiteSpritePath:     "/images/bootstrap/glyphicons-halflings-white.png";
+
+.fb-login-button { display: none; }
+
+ol.steps {
+  font-size: 18px;
+}
+ol.steps li {
+  list-style: none;
+}
+ol.steps li .well {
+  margin: 5px 25px;
+}
