--- a/views/index.jade
+++ b/views/index.jade
@@ -12,11 +12,14 @@
           li
             a(href="#contact") Contact
 .container
-  .row
-    .span8.grey
-      h1 Facebook page add app
-      p This utility lets you add an app to a Facebook page
-      p
-        a.btn.btn-primary.btn(href="#") Lean more >>
-    .span4
-      .fb-login-button(data-show-faces="false", data-width="200", data-max-rows="1") Connect to Facebook
+  .page-header
+    h1 Facebook page add app
+    p This utility lets you add an app to a Facebook page
+
+  ol.steps.span6
+    li
+      i.icon-check-empty
+      |  Connect to Facebook
+      .well
+        .fb-login-button(data-show-faces="false", data-width="200", data-max-rows="1") Connect to Facebook
+
