--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,11 @@ html
 
     #fb-root
 
-    script(src="//connect.facebook.net/en_US/all.js#xfbml=1&appId=216538865141478")
-    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js")
-    script(src="/javascripts/main.js")
+    script(type='text/javascript', src="//connect.facebook.net/en_US/all.js")
+    script(type='text/javascript', src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js")
+    script(type='text/javascript', src="/javascripts/main.js")
+    script(type='text/javascript')
+      FB.init({
+        appId: #{appId},
+        xfbml: true
+      });
