--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,15 +3,32 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body!= body
+  body
+    .navbar.navbar-fixed-top
+      .navbar-inner
+        .container
+          a.brand(href="#")= name
+          .nav-collapse
+            ul.nav
+              - for(var i=0; i<menu.length; i++)
+                if(menu[i].active)
+                  li.active
+                    a(href=menu[i].url)= menu[i].name
+                else
+                  li
+                    a(href=menu[i].url)= menu[i].name
+    != body
 
     #fb-root
 
-    script(type='text/javascript', src="//connect.facebook.net/en_US/all.js")
-    script(type='text/javascript', src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js")
-    script(type='text/javascript', src="/javascripts/main.js")
-    script(type='text/javascript')
-      FB.init({
-        appId: #{appId},
-        xfbml: true
-      });
+    - if(js)
+      script(type='text/javascript', src='//connect.facebook.net/en_US/all.js')
+      script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js')
+      script(type='text/javascript', src='//twitter.github.com/hogan.js/builds/2.0.0/hogan-2.0.0.js')
+      script(type='text/javascript', src='/javascripts/jquery.typewatch.js')
+      script(type='text/javascript', src='/javascripts/main.js')
+      script(type='text/javascript')
+        FB.init({
+          appId: #{appId},
+          xfbml: true
+        });
