--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,10 +21,21 @@ html
 
     #fb-root
 
+    script(type="text/javascript")
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-34180787-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
     - if(js)
       script(type='text/javascript', src='//connect.facebook.net/en_US/all.js')
       script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js')
-      script(type='text/javascript', src='//twitter.github.com/hogan.js/builds/2.0.0/hogan-2.0.0.js')
+      script(type='text/javascript', src='//javascripts/hogan-2.0.0.js')
       script(type='text/javascript', src='/javascripts/jquery.typewatch.js')
       script(type='text/javascript', src='/javascripts/main.js')
       script(type='text/javascript')
