--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,7 +35,7 @@ html
     - if(js)
       script(type='text/javascript', src='//connect.facebook.net/en_US/all.js')
       script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js')
-      script(type='text/javascript', src='//javascripts/hogan-2.0.0.js')
+      script(type='text/javascript', src='/javascripts/hogan-2.0.0.js')
       script(type='text/javascript', src='/javascripts/jquery.typewatch.js')
       script(type='text/javascript', src='/javascripts/main.js')
       script(type='text/javascript')
