--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,9 @@
 html
   head
     title= title
+    meta(name='apple-mobile-web-app-capable', content='yes')
+    meta(name="apple-mobile-web-app-status-bar-style", content="default")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=5")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     .navbar.navbar-fixed-top
